<?xml version="1.0"?>
<package format="2">
  <name>gps</name>
  <version>0.0.0</version>
  <description>GPS converter package for move_base navigation</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>geographiclib</build_depend>
  <exec_depend>geographiclib</exec_depend>

</package>