<package format="2">
  <name>path_tracker_package</name>
  <version>0.0.0</version>
  <description>The path_tracker_package</description>

  <maintainer email="user@example.com">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>

  <build_depend>catkin</build_depend>
  <exec_depend>catkin</exec_depend>
</package>
